<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HMN Android</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="title_activity_command_runner">CommandRunner</string>
    <string name="lbl_command_name">Command:</string>
    <string name="command_name">Command to run</string>
    <string name="menu_share">Share this result.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="btn_run">Run</string>
    <string name="lbl_installed_apps">Installed Applications</string>
    <string name="btn_start_service">Toggle Collection Service</string>
    <string name="title_activity_application_detail_view">Default Application</string>
    <string name="sort_by_label_text">Sort by: </string>
    <string name="sort_order_label_text">Sort order: </string>
    <string name="extraInfo">Extra Information About App."</string>
    <string name="dbRatingStr">Overall Rating:</string>
    <string name="userRatingStr">My Rating:</string>
    <string name="benefitRatingStr">Overall Rating:</string>
    <string name="benefitPopularityStr">Overall Popularity:</string>
    <string name="benefitMyRatingStr">My Rating:</string>
    <string name="benefitMyPopularityStr">My Popularity:</string>
    <string name="benefitLaunchCountStr">Launch Count:</string>
    <string name="benefitUseTimeStr">Used Time:</string>
    <string name="myBenefit">My Benefit</string>
    <string name="overallBenefit">Overall Benefit</string>
    <string name="myBenefitButton">My Benefit Details</string>
    <string name="overallBenefitButton">Overall Benefit Details</string>
    <string name="hmnLogo">HMN Logo"</string>
    <string name="updated">Last updated:</string>
    <string name="lost_connection">Lost connection.</string>
    <string name="wifi_connected">Wi-Fi connected.</string>
    <string name="connection_error">Unable to load content. Check your network connection.</string>
    <string name="costInfo">Cost and Benefit</string>
    <string name="monitorForApp">Network Monitor For App</string>
    <string name="monitorForDevice">Network Monitor For Device</string>
    <string name="app_class_all">All Apps</string>
    <string name="app_class_active">Active Apps</string>
    <string name="app_class_run">Running Apps</string>
    <string name="app_class_fore">Foreground Apps</string>
    <string name="app_class_back">Background Apps</string>
    <string name="app_class_cache">Cached Apps</string>
    <string name="app_class_not_running">Not Running Apps</string>

    <!--
    <string-array name="sort_by">
        <item>Cost</item>
        <item>Benefit</item>
        <item>Name</item>
    </string-array>
    -->

    <string name="title_activity_my_benefit_detail">MyBenefitDetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_overall_benefit_detail">OverallBenefitDetailActivity</string>

</resources>