<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/hmnLogo"
        android:scaleType="fitXY"
        android:src="@drawable/hmnlogo" />

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:layout_below="@+id/imageView1"
    android:orientation="vertical" >

    <Button
        android:id="@+id/allButton"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.14"
        android:text="@string/app_class_all" />
    
    <Button
        android:id="@+id/activeButton"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.14"       
        android:text="@string/app_class_active" />

    <Button
        android:id="@+id/runningButton"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.14"       
        android:text="@string/app_class_run" />

    <Button
        android:id="@+id/foregroundButton"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.14"       
        android:text="@string/app_class_fore" />

    <Button
        android:id="@+id/backgroundButton"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.14"       
        android:text="@string/app_class_back" />

    <Button
        android:id="@+id/cachedButton"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.14"       
        android:text="@string/app_class_cache" />

    <Button
        android:id="@+id/notRunningButton"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.14"       
        android:text="@string/app_class_not_running" />

</LinearLayout>
</RelativeLayout>