<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lblapp_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
	        <TextView
	            android:id="@+id/dbRatingTitle"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
				android:text="@string/dbRatingStr"
	            android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_alignParentLeft="true" />
            <RatingBar
                android:id="@+id/dbRating"
                style="@style/dbRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:isIndicator="true"
                android:layout_alignParentRight="true" />
	        <TextView
	            android:id="@+id/userRatingTitle"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
				android:text="@string/userRatingStr"
			    android:layout_below="@+id/dbRatingTitle"
	            android:textAppearance="?android:attr/textAppearanceLarge" 
                android:layout_alignParentLeft="true" />
            <RatingBar 
		        android:id="@+id/yourRating"
		        style="@style/userRatingBar"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
			    android:layout_below="@+id/dbRating"
		        android:numStars="5"
		        android:isIndicator="false"
		        android:layout_alignParentRight="true" />

        </RelativeLayout>

	    <ScrollView
	        android:id="@+id/scrollView1"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent" 
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="10dp">
	
	            <TextView
	                android:id="@+id/txt_app_info"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/extraInfo"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	            
	    </ScrollView>
  
  	</LinearLayout>
    
</RelativeLayout>
